Added SQLite EF components Started creating AnnouncementService

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "AnnouncementDatabase": {
+    "FileName": "./announcements.sqlite",
+    "AnnouncementTableName": "Announcements"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
